<resources>

    <string name="app_name">Magic Life Counter</string>
    <string name="action_settings">Settings</string>

    <string name="btn_vidaplus">Vida +</string>
    <string name="btn_vidaminus">Vida -</string>
    <string name="btn_venenoplus">Veneno +</string>
    <string name="btn_venenominus">Veneno -</string>
    <string name="btn_transferup">Transfer </string>
    <string name="btn_transferdown">Transfer </string>
    <string name="btn_menu_reset">Reset</string>
    <string name="snackbarText">LA PARTIDA A TERMINADO!!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
